[package]
name = "tcp_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tun-tap = "0.1.2"
etherparse = "0.13.0"
bitflags = "2.4.1"
nix = {version = "0.27.0" , features = ["poll"]}


[lib]
name = "tcp_rust"
